[package]
name = "bevy_asm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12"
rusqlite = {version = "0.30", features = ["bundled"]}
strum = {version = "0.26", features = ["derive"]}
strum_macros = "0.26"
thiserror = "1.0"
walkdir = "2.4"
